# arxiv-researcher

./: .gitignore  README.md  pixi.toml  pyproject.toml
arxiv_researcher/: app.py
