[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arxiv_researcher"
version = "0.1.0"
description = "Help you summarize arxiv papers."
readme = "README.md"
requires-python = ">=3.10.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
]
dependencies = [
    "gradio==3.43.2",
    "nougat-ocr",
    "unstructured",
    "markdown",
]

[tool.setuptools.packages.find]
include = ["arxiv_researcher*"]